--- a/app/src/main/res/layout/goal_item.xml
+++ b/app/src/main/res/layout/goal_item.xml
@@ -135,18 +135,32 @@
             android:id="@+id/editTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Edit Goals"
+            android:text="Edit"
             android:textSize="30dp"
             android:textColor="@color/white"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <ImageButton
+            android:id="@+id/closeButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_close"
+            android:contentDescription="@string/close_button_description"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <EditText
             android:id="@+id/goalTitleEdit"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
+            android:padding="16dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_corner"
+            android:backgroundTint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/editTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -158,8 +172,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:clickable="true"
+            android:focusable="true"
             android:padding="16dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/goalTitleEdit">
@@ -171,7 +187,7 @@
                 app:srcCompat="@drawable/ic_calendar"
                 android:layout_marginEnd="5dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/teal"/>
+                app:tint="@color/black"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -179,20 +195,27 @@
                 android:textSize="16dp"
                 android:text="Start Date"
                 app:layout_constraintTop_toBottomOf="@id/startDate"/>
-            <TextView
-                android:id="@+id/editStartDate"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"
-                android:text="Select Your Start Date"
-                android:layout_marginEnd="15dp"/>
-            <ImageButton
-                android:id="@+id/startDateBtn"
-                android:layout_width="10dp"
-                android:layout_height="match_parent"
-                android:text="Select Start Date"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/ic_arrow_drop_down"/>
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <TextView
+                    android:id="@+id/editStartDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="Select Your Start Date"
+                    android:gravity="end"
+                    android:layout_marginEnd="15dp"/>
+                <ImageView
+                    android:id="@+id/startDateArrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:src="@drawable/ic_arrow_drop_down" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <!-- End Date Section -->
@@ -201,8 +224,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:clickable="true"
+            android:focusable="true"
             android:padding="16dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/startDateSection">
@@ -222,20 +247,26 @@
                 android:textSize="16dp"
                 android:text="End Date"
                 app:layout_constraintTop_toBottomOf="@id/startDate"/>
-            <TextView
-                android:id="@+id/editEndDate"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"
-                android:text="No End Date Selected"
-                android:layout_marginEnd="15dp"/>
-            <ImageButton
-                android:id="@+id/endDateBtn"
-                android:layout_width="10dp"
-                android:layout_height="match_parent"
-                android:text="Select Start Date"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/ic_arrow_drop_down"/>
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <TextView
+                    android:id="@+id/editEndDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="No End Date Selected"
+                    android:gravity="end"
+                    android:layout_marginEnd="15dp"/>
+                <ImageView
+                    android:id="@+id/endDateArrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:src="@drawable/ic_arrow_drop_down" />
+            </LinearLayout>
         </LinearLayout>
 
 
@@ -245,32 +276,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/white"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/endDateSection">
 
-            <ImageView
-                android:id="@+id/editfrequencyIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
-                app:srcCompat="@drawable/ic_repeat" />
+            <LinearLayout
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <ImageView
+                    android:id="@+id/editfrequencyIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="5dp"
+                    app:srcCompat="@drawable/ic_repeat" />
 
-            <TextView
-                android:id="@+id/editgoalFrequency"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/black"
-                android:textSize="16dp"
-                android:layout_marginEnd="15dp"
-                android:text="Repeat" />
+                <TextView
+                    android:id="@+id/editgoalFrequency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/black"
+                    android:textSize="16dp"
+                    android:layout_marginEnd="20dp"
+                    android:text="Repeat" />
+            </LinearLayout>
+
             <Spinner
                 android:id="@+id/editFrequencyBtn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_arrow_drop_down"
                 app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -285,29 +324,37 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/rounded_corner"
             android:backgroundTint="@color/white"
             app:layout_constraintTop_toBottomOf="@id/editfrequencySection">
 
-            <ImageView
-                android:id="@+id/sunImage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
-                app:srcCompat="@drawable/ic_sun"
-                app:layout_constraintTop_toBottomOf="parent"/>
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:textSize="16dp"
-                android:text="Difficulty"
-                app:layout_constraintTop_toBottomOf="@id/startDate"/>
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <ImageView
+                    android:id="@+id/sunImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="5dp"
+                    app:srcCompat="@drawable/ic_sun"
+                    app:layout_constraintTop_toBottomOf="parent"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:textSize="16dp"
+                    android:text="Difficulty"
+                    app:layout_constraintTop_toBottomOf="@id/startDate"/>
+            </LinearLayout>
+
             <Spinner
                 android:id="@+id/editSunDifficulty"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:text="Difficulty"
                 app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
